; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/pt1/extr_va1j5jf8007s.c_va1j5jf8007s_prepare.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/pt1/extr_va1j5jf8007s.c_va1j5jf8007s_prepare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.va1j5jf8007s_state* }
%struct.va1j5jf8007s_state = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @va1j5jf8007s_prepare(%struct.dvb_frontend* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.dvb_frontend*, align 8
  %4 = alloca %struct.va1j5jf8007s_state*, align 8
  %5 = alloca i32, align 4
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %3, align 8
  %6 = load %struct.dvb_frontend*, %struct.dvb_frontend** %3, align 8
  %7 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %6, i32 0, i32 0
  %8 = load %struct.va1j5jf8007s_state*, %struct.va1j5jf8007s_state** %7, align 8
  store %struct.va1j5jf8007s_state* %8, %struct.va1j5jf8007s_state** %4, align 8
  %9 = load %struct.va1j5jf8007s_state*, %struct.va1j5jf8007s_state** %4, align 8
  %10 = call i32 @va1j5jf8007s_prepare_1(%struct.va1j5jf8007s_state* %9)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = load i32, i32* %5, align 4
  store i32 %14, i32* %2, align 4
  br label %25

15:                                               ; preds = %1
  %16 = load %struct.va1j5jf8007s_state*, %struct.va1j5jf8007s_state** %4, align 8
  %17 = call i32 @va1j5jf8007s_prepare_2(%struct.va1j5jf8007s_state* %16)
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %5, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %15
  %21 = load i32, i32* %5, align 4
  store i32 %21, i32* %2, align 4
  br label %25

22:                                               ; preds = %15
  %23 = load %struct.va1j5jf8007s_state*, %struct.va1j5jf8007s_state** %4, align 8
  %24 = call i32 @va1j5jf8007s_init_frequency(%struct.va1j5jf8007s_state* %23)
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %22, %20, %13
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32 @va1j5jf8007s_prepare_1(%struct.va1j5jf8007s_state*) #1

declare dso_local i32 @va1j5jf8007s_prepare_2(%struct.va1j5jf8007s_state*) #1

declare dso_local i32 @va1j5jf8007s_init_frequency(%struct.va1j5jf8007s_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
